# dsf

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-bake.hcl
.cargo/: config.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs  main.rs
client/src/driver/: http.rs  mod.rs  unix.rs
core/: Cargo.toml
core/src/: error.rs  helpers.rs  keys.rs  lib.rs  prelude.rs
core/src/api/: mod.rs
core/src/base/: header.rs  mod.rs
core/src/crypto/: mod.rs  native.rs
core/src/net/: mod.rs  request.rs  response.rs
core/src/options/: helpers.rs  mod.rs
core/src/service/: builder.rs  kinds.rs  mod.rs  net.rs  publisher.rs  registry.rs  subscriber.rs
core/src/types/: address.rs  array.rs  datetime.rs  flags.rs  kinds.rs  mod.rs
core/src/wire/: builder.rs  container.rs  header.rs  mod.rs
daemon/: Cargo.toml  build.rs  dsfd.env
daemon/src/: engine.rs  error.rs  lib.rs
daemon/src/core/: data.rs  mod.rs  peers.rs  replicas.rs  services.rs  store.rs  subscribers.rs
daemon/src/core/peers/: info.rs  mod.rs
daemon/src/core/services/: data.rs  inst.rs  mod.rs
daemon/src/daemon/: dht.rs  dsf.rs  mod.rs  net.rs  net2.rs  ops.rs  tests.rs
daemon/src/io/: http.rs  mock.rs  mod.rs  net.rs  unix.rs
daemon/src/net/: control.rs  mod.rs  push_data.rs  register.rs  subscribe.rs
daemon/src/plugins/: address.rs  mod.rs  upnp.rs
daemon/src/rpc/: bootstrap.rs  connect.rs  control.rs  create.rs  data.rs  discover.rs  locate.rs  lookup.rs  mod.rs  ns.rs  ops.rs  publish.rs  push.rs  register.rs  replicate.rs  search.rs  subscribe.rs  sync.rs
daemon/src/store/: auth.rs  error.rs  ident.rs  mod.rs  object.rs  peers.rs  schema.rs  services.rs
daemon/tests/: e2e.rs  ns.rs  scale.rs
engine/: Cargo.toml
engine/src/: error.rs  lib.rs
engine/src/comms/: mock.rs  mod.rs  udp.rs
engine/src/engine/: mod.rs  std_udp.rs
engine/src/store/: mem_store.rs  mod.rs  sled_store.rs  sqlite_store.rs
engine/tests/: engine.rs
rpc/: Cargo.toml
rpc/src/: config.rs  control.rs  data.rs  debug.rs  delegation.rs  display.rs  helpers.rs  lib.rs  name.rs  page.rs  peer.rs  replica.rs  service.rs  subscriber.rs
