[package]
name = "dsf-engine"
version = "0.3.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "DSF embedded engine"
repository = "https://github.com/dist-svc/dsf"
homepage = "https://github.com/dist-svc"
keywords = ["DSF", "distributed"]
license = "MPL-2.0"
edition = "2021"

[features]
std = [ "thiserror", "dsf-core/std" ]
alloc = [ "dsf-core/alloc" ]
full = []
sqlite = [ "diesel", "libsqlite3-sys", "dsf-core/diesel" ]

default = [ "std", "alloc", "sqlite", "full" ]

[dependencies]
dsf-core = { version = "*", default_features = false }

bitflags = "1.3.2"
byteorder = { version = "1.3.4", default_features = false }
log = { version = "0.4.8", default_features = false }
heapless = "0.7.16"

defmt = { version = "0.3.0", optional = true }
serde = { version = "1.0.104", optional = true }
structopt = { version = "0.3.8", optional = true }
futures = { version = "0.3.1", optional = true }
thiserror = { version = "*", optional = true }
diesel = { version = "2.0.4", features = ["sqlite", "extras", "chrono", "r2d2"], optional = true }
libsqlite3-sys = { version = "0.26.0", optional = true, features = [ "bundled" ] }


[dev-dependencies]
simplelog = "0.12.1"
anyhow = "1.0.70"
tempfile = "3.5.0"
