[package]
name = "dsf-rpc"
description = "DSF RPC object/message definitions"
authors = ["ryan <ryan@kurte.nz>"]
repository = "https://github.com/dist-svc/dsf-rpc"
license = "MPL-2.0"
keywords = [ "DSF" ]
version = "0.2.0"
edition = "2021"

[features]
std = []
default = [ "std", "diesel" ]

[dependencies]
dsf-core = { version = "0.2.0", features = ["serde", "clap", "std"] }

clap = { version = "4.2.1", features = [ "derive" ] }
serde = { version = "*", features = [ "derive" ] }
humantime = "1.3.0"
futures = "0.3.1"
async-trait = "0.1.21"
chrono = { version = "0.4.10", features = ["serde"] }
rand = "0.7.2"
colored = "1.9.0"
chrono-humanize = "0.0.11"
chrono-english = "0.1.4"
base64 = "*"

diesel = { version = "1.4.3", optional = true }
strum = { version = "0.24.1", features = [ "derive" ] }


